objects/vlocity_cmt__PaymentAdjustment__c.object
<CustomObject>
    <description>Payment adjustments allow a Customer Service Rep to request an adjustment to a customer&apos;s billing statement. For example, this could occur as the result of a case that was registered to dispute a prior billing or product issue. Once the adjustment is approved, it can then be fed to the client&apos;s billing system for processing. This object can also be used to register a client&apos;s payment independent of any dispute.</description>
    <fields>
        <fullName>Financial_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial Promotion</description>
        <inlineHelpText>Financial Promotion</inlineHelpText>
        <label>Financial Promotion</label>
        <referenceTo>FinancialPromotion__c</referenceTo>
        <relationshipLabel>Payment Adjustments</relationshipLabel>
        <relationshipName>Payment_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Huawei_Invoice_Item_Sequence__c</fullName>
        <label>Huawei_Invoice_Item_Sequence</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship that establishes the means or means of payment that were configured as intention to use for the payment of the order.</description>
        <inlineHelpText>Relationship that establishes the means or means of payment that were configured as intention to use for the payment of the order</inlineHelpText>
        <label>Sale Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Payment Adjustments</relationshipLabel>
        <relationshipName>Payment_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentCode__c</fullName>
        <description>Código de pago que devuelve el servicio S348</description>
        <label>Payment Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments/Adjustments</relationshipLabel>
        <relationshipName>PaymentAdjustments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisputeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dispute Id</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Payments / Adjustments</relationshipLabel>
        <relationshipName>Payment_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InstallmentAmount__c</fullName>
        <label>Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Method__c</fullName>
        <label>Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Direct Debit</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Adjustment Credit</fullName>
                </value>
                <value>
                    <fullName>Adjustment Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Mode__c</fullName>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Installment</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PaymentMethodId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Method</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_cmt__PaymentMethod__c.vlocity_cmt__IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.vlocity_cmt__AccountId__c</field>
                <operation>equals</operation>
                <valueField>vlocity_cmt__PaymentMethod__c.vlocity_cmt__AccountId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_cmt__PaymentMethod__c</referenceTo>
        <relationshipLabel>Payment Adjustments</relationshipLabel>
        <relationshipName>Payment_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceAmount__c</fullName>
        <label>Service Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceEndDate__c</fullName>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceType__c</fullName>
        <label>Service Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half-Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statement</label>
        <referenceTo>vlocity_cmt__Statement__c</referenceTo>
        <relationshipLabel>Payment Adjustments</relationshipLabel>
        <relationshipName>PaymentAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Applied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalInstallments__c</fullName>
        <label>Total Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Payment</fullName>
                </value>
                <value>
                    <fullName>CSR Adjustment</fullName>
                </value>
                <value>
                    <fullName>System Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Adjustment</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Payment Adjustments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>